reading of fantasy data

--- a/public/app/workwstest.html
+++ b/public/app/workwstest.html
@@ -20,8 +20,8 @@
           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div data-ng-view></div>
-        
-
+        <h1>Work WS Test</h1>
+        <button data-ng-click="obbWsTestConnect()">Connect</button>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
         <script>
@@ -73,3 +73,4 @@
         <!-- endbuild -->
     </body>
 </html>
+
